--- a/profileStyles.css
+++ b/profileStyles.css
@@ -1,4 +1,4 @@
-li {
+/* li {
     color: darkgreen;
     font-size: 1.5rem;
 }
@@ -7,28 +7,10 @@ p, h3{
     font-size: 1.2rem;
     font-family: 'Garamond', serif;
 }
+*/
 
-/* id selector */
-#search {
-    background-color: darkgoldenrod;
-    color: darkviolet;
-    width: 50vw;
-}
-
-/* class selectors */
-
-.btn {
-
-}
-
-/* wildcard selectors */
-
-* {
-    /* margin: 0px;
-    padding: 0px; */
-}
-
-.heading {    
+.heading {  
+    padding-top: 1vw;  
     text-align: center;
 }
 
@@ -37,11 +19,12 @@ body {
     color: rgb(84, 0, 139);
     font-family: 'Garamond', serif;
     font-size: 1rem;
-    background-image:url("https://st.depositphotos.com/2143989/2630/v/600/depositphotos_26301339-stock-illustration-abstract-background.jpg");
-    background-repeat: no-repeat;
+    background-image: url(./src/SeamlessLeafBackground.jpg);
+    background-repeat: repeat;
     background-position: center;
     background-size: cover;
 }
+
 
 .container {
     width: 80vw;
@@ -49,21 +32,234 @@ body {
 
 }
 
+
 .centredImage {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    width: 200px;
+    border-radius: 15px;
+}
+/*
+
+/* .flex-container {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: center;
+    gap: 20vw;
+}
+*/ */
+
+.flex-container li {
+    list-style: none;
+    gap: 20vw;
+}
+
+
+canvas {
     display: block;
     margin-left: auto;
     margin-right: auto;
     width: 200px;
 }
 
-.flex-container {
+.game-container {
+    text-align: center;
+} 
+
+
+/* Global Styles */
+/* body {
+    font-family: 'Garamond', serif;
+    margin: 0;
+    padding: 0;
+    background-color: #2d3142;
+    color: white;
+  }
+   */
+  /* CSS for navbar */
+  nav {
+    background-color: #f5f5f5;
+    padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 30vw;
-}
-
-.flex-container li {
+    gap: 10vw;
+    width: 100%;
+  }
+  
+  nav a {
+    text-decoration: none;
+    margin: 0 20px;
+    color: #000;
+    font-weight: bold;
+    text-transform: uppercase;
+    transition: color 0.3s ease;
+  }
+  
+  nav a:hover {
+    color: #333;
+    background-color: #bfc0c0; /* background colour on hover */
+    border-radius: 5px; /* rounded corners on hover */
+    padding: 5px 10px; /* Adjusts padding on hover */
+  }
+  
+  /* CSS for search bar */
+  .search-bar {
+    margin-left: auto; /* Moves the search bar to the right */
+  }
+  
+  .search-bar label {
+    margin-right: 5px; /* Adds spacing between label and input */
+  }
+  
+  h1,
+  h2,
+  h3 {
+    display: inline-block;
+    padding: 10px;
+    background-color: #4f5d75; /* Sets background colour of box around headers */
+    color: white;
+    font-family: 'Garamond', serif;
+    font-weight: 700;
+    border-radius: 10px;
+  }
+  
+  section {
+    margin-bottom: 20px;
+  }
+  
+  p,
+  ul,
+  ol {
+    font-family: 'Garamond', serif;
+    font-weight: 400;
+    color: white; /* Sets text colour to white */
+  }
+  
+  footer {
+    background-color: #f5f5f5;
+    padding: 10px;
+    text-align: center;
+  }
+  
+  /* Flexbox */
+  .flex-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-wrap: wrap;
+  }
+  
+  .flex-item {
+    flex-basis: 30%;
+    padding: 20px;
+    height: 250px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  
+  /* .flex-item img {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+    
+  } */
+  
+  .highlighted {
+    border: 2px solid #f00;
+  }
+  
+  /* Flexbox for portfolio and mission */
+  
+  .section-container {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    text-align: center;
+  }
+  
+  .section-container section {
+    margin-bottom: 30px;
+  }
+  
+  /* CSS for Skills list */
+  
+  .skills-list {
     list-style: none;
-}
+    padding: 0;
+    columns: 2;
+    column-gap: 0px;
+    text-align: center;
+    margin: 0 auto;
+  }
+  
+  .skills-list h3 {
+    text-align: center;
+  }
+  
+  .skills-list li {
+    margin-bottom: 10px;
+  }
+  
+  .rating {
+    color: #ffd700;
+    font-size: 20px;
+    display: inline-block;
+  }
+  
+  /* CSS for Interests list */
+  
+  .interests-list {
+    list-style: none;
+    padding: 0;
+  }
+  
+  .interests-list li {
+    margin-bottom: 10px;
+  }
+  
+  footer {
+    color: #333;
+    background-color: #f5f5f5;
+    padding: 10px;
+    text-align: center;
+    position: fixed; /* Position the footer as fixed so it doesn't move */
+    left: 0;
+    bottom: 0;
+    width: 100%;
+  }
+  
+  /* projects.html CSS */
+  
+  table {
+    width: 100%;
+    border-collapse: collapse;
+    text-align: center;
+  }
+  
+  th,
+  td {
+    padding: 10px;
+    border-bottom: 1px solid #bfc0c0;
+  }
+  
+  thead th {
+    background-color: #2d3142;
+    color: #fff;
+  }
+  
+  tbody td:nth-child(3) {
+    font-weight: bold;
+  }
+  
+  .table-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
