--- a/profileStyles.css
+++ b/profileStyles.css
@@ -1,13 +1,3 @@
-/* li {
-    color: darkgreen;
-    font-size: 1.5rem;
-}
-
-p, h3{
-    font-size: 1.2rem;
-    font-family: 'Garamond', serif;
-}
-*/
 
 .heading {  
     padding-top: 1vw;  
@@ -16,7 +6,6 @@ p, h3{
 
 body {
     background-color: lightblue;
-    color: rgb(84, 0, 139);
     font-family: 'Garamond', serif;
     font-size: 1rem;
     background-image: url(./src/SeamlessLeafBackground.jpg);
@@ -27,9 +16,9 @@ body {
 
 
 .container {
-    width: 80vw;
-    margin: auto;
-
+    padding-bottom: 1vw;
+    background-color: rgba(48, 63, 62, 0.5);
+    border-radius: 20px;
 }
 
 
@@ -38,22 +27,12 @@ body {
     margin-left: auto;
     margin-right: auto;
     width: 200px;
-    border-radius: 15px;
+    border-radius: 20px;
 }
-/*
-
-/* .flex-container {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    justify-content: center;
-    gap: 20vw;
-}
-*/ */
 
 .flex-container li {
     list-style: none;
-    gap: 20vw;
+    gap: 30vw;
 }
 
 
@@ -66,34 +45,24 @@ canvas {
 
 .game-container {
     text-align: center;
+    margin-bottom: 5vw;
 } 
 
-
-/* Global Styles */
-/* body {
-    font-family: 'Garamond', serif;
-    margin: 0;
-    padding: 0;
-    background-color: #2d3142;
-    color: white;
-  }
-   */
-  /* CSS for navbar */
   nav {
-    background-color: #f5f5f5;
+    background-color: #015521;
     padding: 10px;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content: center;
-    gap: 10vw;
+    gap: 15vw;
     width: 100%;
   }
   
   nav a {
     text-decoration: none;
     margin: 0 20px;
-    color: #000;
+    color: #40d6fc;
     font-weight: bold;
     text-transform: uppercase;
     transition: color 0.3s ease;
@@ -101,18 +70,19 @@ canvas {
   
   nav a:hover {
     color: #333;
-    background-color: #bfc0c0; /* background colour on hover */
-    border-radius: 5px; /* rounded corners on hover */
-    padding: 5px 10px; /* Adjusts padding on hover */
+    background-color: #bfc0c0;
+    border-radius: 10px;
+    padding: 5px 10px;
   }
   
-  /* CSS for search bar */
   .search-bar {
-    margin-left: auto; /* Moves the search bar to the right */
+    margin-left: auto;
+    color: #40d6fc
   }
   
-  .search-bar label {
-    margin-right: 5px; /* Adds spacing between label and input */
+  label {
+    margin-right: 5px;
+    color: #40d6fc
   }
   
   h1,
@@ -120,11 +90,11 @@ canvas {
   h3 {
     display: inline-block;
     padding: 10px;
-    background-color: #4f5d75; /* Sets background colour of box around headers */
-    color: white;
+    background-color: #015521;
+    color: #40d6fc;
     font-family: 'Garamond', serif;
     font-weight: 700;
-    border-radius: 10px;
+    border-radius: 20px;
   }
   
   section {
@@ -139,13 +109,6 @@ canvas {
     color: white; /* Sets text colour to white */
   }
   
-  footer {
-    background-color: #f5f5f5;
-    padding: 10px;
-    text-align: center;
-  }
-  
-  /* Flexbox */
   .flex-container {
     display: flex;
     justify-content: center;
@@ -162,13 +125,6 @@ canvas {
     justify-content: center;
     align-items: center;
   }
-  
-  /* .flex-item img {
-    max-width: 100%;
-    max-height: 100%;
-    object-fit: cover;
-    
-  } */
   
   .highlighted {
     border: 2px solid #f00;
@@ -188,48 +144,13 @@ canvas {
     margin-bottom: 30px;
   }
   
-  /* CSS for Skills list */
-  
-  .skills-list {
-    list-style: none;
-    padding: 0;
-    columns: 2;
-    column-gap: 0px;
-    text-align: center;
-    margin: 0 auto;
-  }
-  
-  .skills-list h3 {
-    text-align: center;
-  }
-  
-  .skills-list li {
-    margin-bottom: 10px;
-  }
-  
-  .rating {
-    color: #ffd700;
-    font-size: 20px;
-    display: inline-block;
-  }
-  
-  /* CSS for Interests list */
-  
-  .interests-list {
-    list-style: none;
-    padding: 0;
-  }
-  
-  .interests-list li {
-    margin-bottom: 10px;
-  }
   
   footer {
-    color: #333;
-    background-color: #f5f5f5;
+    color: #40d6fc;
+    background-color: #015521;
     padding: 10px;
     text-align: center;
-    position: fixed; /* Position the footer as fixed so it doesn't move */
+    position: fixed;
     left: 0;
     bottom: 0;
     width: 100%;
